--- a/po/cs.po
+++ b/po/cs.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Marek Černocký <marek@manet.cz>, 2018
 # Milan Knížek <knizek@volny.cz>, 2013
 # Vincent Untz <vuntz@gnome.org>, 2011
 msgid ""
@@ -10,30 +11,30 @@ msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-09-19 09:07+0000\n"
-"Last-Translator: Milan Knížek <knizek@volny.cz>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Marek Černocký <marek@manet.cz>, 2018\n"
 "Language-Team: Czech (http://www.transifex.com/freedesktop/cups-pk-helper/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: cs\n"
-"Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n >= 2 && n <= 4 && n % 1 == 0) ? 1: (n % 1 != 0 ) ? 2 : 3;\n"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:1
 msgid "Add/Remove/Edit a class"
-msgstr "Přidat/Odstranit/Upravit třídu"
+msgstr "Přidat/odebrat/upravit třídu"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:2
 msgid "Add/Remove/Edit a local printer"
-msgstr "Přidat/Odstranit/Upravit místní tiskárnu"
+msgstr "Přidat/odebrat/upravit místní tiskárnu"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:3
 msgid "Add/Remove/Edit a printer"
-msgstr "Přidat/Odstranit/Upravit tiskárnu"
+msgstr "Přidat/odebrat/upravit tiskárnu"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:4
 msgid "Add/Remove/Edit a remote printer"
-msgstr "Přidat/Odstranit/Upravit vzdálenou tiskárnu"
+msgstr "Přidat/odebrat/upravit vzdálenou tiskárnu"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:5
 msgid "Change printer settings"
@@ -41,15 +42,15 @@ msgstr "Upravit nastavení tiskárny"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:6
 msgid "Enable/Disable a printer"
-msgstr "Povolit/Zakázat tiskárnu"
+msgstr "Povolit/zakázat tiskárnu"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:7
 msgid "Get list of available devices"
-msgstr "Získat seznam dostupných zařízení"
+msgstr "Vypsat seznam dostupných zařízení"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:8
 msgid "Get/Set server settings"
-msgstr "Získat/Upravit nastavení serveru"
+msgstr "Vypsat/upravit nastavení serveru"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:9
 msgid "Privileges are required to add/remove/edit a class."
@@ -71,7 +72,7 @@ msgstr "K přidání/odebrání/úpravě vzdálené tiskárny jsou vyžadována 
 msgid ""
 "Privileges are required to change printer settings. This should only be "
 "needed from the Printers system settings panel."
-msgstr "K úpravě nastavení tiskárny jsou vyžadována oprávnění. Toto by mělo být nutné pouze z panelu v Nastavení systému / Tiskárny."
+msgstr "K úpravě nastavení tiskárny jsou vyžadována oprávnění. To by mělo být nutné pouze z panelu v Nastavení systému / Tiskárny."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:14
 msgid "Privileges are required to enable/disable a printer, or a class."
@@ -101,11 +102,11 @@ msgstr "K nastavení tiskárny nebo třídy jako výchozí tiskárny jsou vyžad
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:20
 msgid "Restart/Cancel/Edit a job"
-msgstr "Restartuj/Zruš/Uprav úlohu"
+msgstr "Restartovat/zrušit/upravit úlohu"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:21
 msgid "Restart/Cancel/Edit a job owned by another user"
-msgstr "Restartovat/Zrušit/Upravit úlohu spuštěnou pod jiným uživatelem"
+msgstr "Restartovat/zrušit/upravit úlohu spuštěnou pod jiným uživatelem"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:22
 msgid "Set a printer as default printer"
