--- a/po/fur.po
+++ b/po/fur.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-11-26 17:09+0000\n"
-"Last-Translator: Fabio Tomat <f.t.public@gmail.com>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Fabio Tomat <f.t.public@gmail.com>, 2017\n"
 "Language-Team: Friulian (http://www.transifex.com/freedesktop/cups-pk-helper/language/fur/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
