--- a/po/he.po
+++ b/po/he.po
@@ -3,111 +3,109 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# Jiri Grönroos <jiri.gronroos@iki.fi>, 2012,2020
-# Kimmo Kujansuu <mrkujansuu@gmail.com>, 2019
-# Ville Skyttä <ville.skytta@iki.fi>, 2011
+# Yaron Shahrabani <sh.yaron@gmail.com>, 2021
 msgid ""
 msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
 "PO-Revision-Date: 2010-11-30 06:44+0000\n"
-"Last-Translator: Jiri Grönroos <jiri.gronroos@iki.fi>, 2012,2020\n"
-"Language-Team: Finnish (http://www.transifex.com/freedesktop/cups-pk-helper/language/fi/)\n"
+"Last-Translator: Yaron Shahrabani <sh.yaron@gmail.com>, 2021\n"
+"Language-Team: Hebrew (http://www.transifex.com/freedesktop/cups-pk-helper/language/he/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: fi\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: he\n"
+"Plural-Forms: nplurals=4; plural=(n == 1 && n % 1 == 0) ? 0 : (n == 2 && n % 1 == 0) ? 1: (n % 10 == 0 && n % 1 == 0 && n > 10) ? 2 : 3;\n"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:1
 msgid "Add/Remove/Edit a class"
-msgstr "Lisää/poista/muokkaa luokkaa"
+msgstr "הוספת/הסרת/עריכת מחלקה"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:2
 msgid "Add/Remove/Edit a local printer"
-msgstr "Lisää/poista/muokkaa paikallinen tulostin"
+msgstr "הוספת/הסרת/עריכת מדפסת מקומית"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:3
 msgid "Add/Remove/Edit a printer"
-msgstr "Lisää/poista/muokkaa tulostin"
+msgstr "הוספת/הסרת/עריכת מדפסת"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:4
 msgid "Add/Remove/Edit a remote printer"
-msgstr "Lisää, poista tai muokkaa etätulostinta"
+msgstr "הוספת/הסרת/עריכת מדפסת מרוחקת"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:5
 msgid "Change printer settings"
-msgstr "Muuta tulostinasetuksia"
+msgstr "עריכת הגדרות מדפסת"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:6
 msgid "Enable/Disable a printer"
-msgstr "Ota tulostin käyttöön tai poista käytöstä"
+msgstr "הפעלת/השבתת מדפסת"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:7
 msgid "Get list of available devices"
-msgstr "Hanki luettelo käytettävissä olevista laitteista"
+msgstr "קבלת רשימה של התקנים זמינים"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:8
 msgid "Get/Set server settings"
-msgstr "Hae/määritä palvelimen asetukset"
+msgstr "קבלת/הגדרת תצורת שרת"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:9
 msgid "Privileges are required to add/remove/edit a class."
-msgstr "Luokan lisääminen/poistaminen/muokkaaminen edellyttää oikeuksia."
+msgstr "נדרשת הרשאה להוספת/הסרת/עריכת מחלקה."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:10
 msgid "Privileges are required to add/remove/edit a local printer."
-msgstr "Paikallisen tulostimen lisääminen/poistaminen/muokkaaminen vaatii etuoikeudet."
+msgstr "נדרשת הרשאה להוספת/הסרת/עריכת מדפסת מקומית."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:11
 msgid "Privileges are required to add/remove/edit a printer."
-msgstr "Tulostimen lisääminen/poistaminen/muokkaaminen vaatii etuoikeudet."
+msgstr "נדרשת הרשאה להוספת/הסרת/עריכת מדפסת."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:12
 msgid "Privileges are required to add/remove/edit a remote printer."
-msgstr "Etätulostimen lisääminen/poistaminen/muokkaaminen vaatii etuoikeudet."
+msgstr "נדרשת הרשאה להוספת/הסרת/עריכת מדפסת מרוחקת."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:13
 msgid ""
 "Privileges are required to change printer settings. This should only be "
 "needed from the Printers system settings panel."
-msgstr "Tulostimen asetusten muuttaminen edellyttää oikeuksia. Tätä tulisi tarvita vain järjestelmäasetusten Tulostimet-paneelissa."
+msgstr "נדרשת הרשאה לעריכת הגדרות המדפסת. הרשאה זו נחוצה רק ללוח המדפסות בהגדרות המערכת."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:14
 msgid "Privileges are required to enable/disable a printer, or a class."
-msgstr "Oikeudet vaaditaan tulostimen tai ryhmän sallimiseksi/poistamiseksi käytöstä."
+msgstr "נדרשת הרשאה להפעלת/השבתת מדפסת או מחלקה."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:15
 msgid "Privileges are required to get list of available devices."
-msgstr "Oikeudet vaaditaan saadaksisi luettelon käytettävissä olevista laitteista."
+msgstr "נדרשת הרשאה לקבלת רשימה של התקנים זמינים."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:16
 msgid "Privileges are required to get/set server settings."
-msgstr "Oikeudet vaaditaan palvelinasetusten saamiseksi."
+msgstr "נדרשות הרשאות לקבלת/הגדרת תצורת השרת."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:17
 msgid ""
 "Privileges are required to restart/cancel/edit a job owned by another user."
-msgstr "Oikeudet vaaditaan toisen käyttäjän omistaman työn käynnistäminen/peruuttaminen/muokkaaminen."
+msgstr "נדרשת הרשאה להפעלה מחדש/ביטול/עריכת משימה בבעלות משתמש אחר."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:18
 msgid "Privileges are required to restart/cancel/edit a job."
-msgstr "Tehtävien uudelleen käynnistys/peruuttaminen/muokkaaminen edellyttää oikeuksia."
+msgstr "נדרשת הרשאה להפעלה מחדש/ביטול/עריכת משימה."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:19
 msgid ""
 "Privileges are required to set a printer, or a class, as default printer."
-msgstr "Tulostimen tai ryhmän määrittäminen oletustulostimeksi vaatii etuoikeudet."
+msgstr "נדרשת הרשאה להגדרת מדפסת או מחלקה כמדפסת בררת מחדל"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:20
 msgid "Restart/Cancel/Edit a job"
-msgstr "Käynnistä uudelleen, peru tai muokkaa työtä"
+msgstr "הפעלה מחדש/ביטול/עריכת משימה"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:21
 msgid "Restart/Cancel/Edit a job owned by another user"
-msgstr "Käynnistä uudelleen, peru tai muokkaa toisen käyttäjän työtä"
+msgstr "הפעלה מחדש/ביטול/עריכת משימה בבעלות משתמש אחר"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:22
 msgid "Set a printer as default printer"
-msgstr "Aseta tulostin oletustulostimeksi"
+msgstr "הגדרת מדפסת כבררת מחדל"
