--- a/po/ia.po
+++ b/po/ia.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-09-19 14:10+0000\n"
-"Last-Translator: Martijn Dekker <mcdutchie@hotmail.com>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Martijn Dekker <mcdutchie@hotmail.com>, 2015\n"
 "Language-Team: Interlingua (http://www.transifex.com/freedesktop/cups-pk-helper/language/ia/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
