--- a/po/ka.po
+++ b/po/ka.po
@@ -3,20 +3,20 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# George Machitidze <giomac@gmail.com>, 2012.
+# George Machitidze <giomac@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
-"Report-Msgid-Bugs-To: https://bugs.freedesktop.org/enter_bug.cgi?product=cups-pk-helper\n"
+"Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2012-08-22 14:01+0000\n"
-"Last-Translator: George Machitidze <giomac@gmail.com>\n"
-"Language-Team: Georgian (http://www.transifex.com/projects/p/freedesktop/language/ka/)\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: George Machitidze <giomac@gmail.com>, 2012\n"
+"Language-Team: Georgian (http://www.transifex.com/freedesktop/cups-pk-helper/language/ka/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ka\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:1
 msgid "Add/Remove/Edit a class"
