--- a/po/ko.po
+++ b/po/ko.po
@@ -13,8 +13,8 @@ msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-09-19 10:30+0000\n"
-"Last-Translator: Shinjo Park <kde@peremen.name>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Shinjo Park <kde@peremen.name>, 2015\n"
 "Language-Team: Korean (http://www.transifex.com/freedesktop/cups-pk-helper/language/ko/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
