--- a/po/oc.po
+++ b/po/oc.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-09-23 20:04+0000\n"
-"Last-Translator: Cédric Valmary <cvalmary@yahoo.fr>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Cédric Valmary <cvalmary@yahoo.fr>, 2015\n"
 "Language-Team: Occitan (post 1500) (http://www.transifex.com/freedesktop/cups-pk-helper/language/oc/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
