--- a/po/sl.po
+++ b/po/sl.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-09-19 10:25+0000\n"
-"Last-Translator: Marek Kasik <mkasik@redhat.com>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Martin Srebotnjak <miles@filmsi.net>, 2012\n"
 "Language-Team: Slovenian (http://www.transifex.com/freedesktop/cups-pk-helper/language/sl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
