--- a/po/tr.po
+++ b/po/tr.po
@@ -5,13 +5,14 @@
 # Translators:
 # Necdet Yücel <necdetyucel@gmail.com>, 2012
 # ozancaglayan <ozancag@gmail.com>, 2011
+# Sabri Ünal <libreajans@gmail.com>, 2022
 msgid ""
 msgstr ""
 "Project-Id-Version: cups-pk-helper\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-03-22 20:04+0100\n"
-"PO-Revision-Date: 2017-09-19 09:41+0000\n"
-"Last-Translator: Marek Kasik <mkasik@redhat.com>\n"
+"PO-Revision-Date: 2010-11-30 06:44+0000\n"
+"Last-Translator: Sabri Ünal <libreajans@gmail.com>, 2022\n"
 "Language-Team: Turkish (http://www.transifex.com/freedesktop/cups-pk-helper/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -71,7 +72,7 @@ msgstr "Bir uzak yazıcı eklemek, kaldırmak, düzenlemek için yetki gerekiyor
 msgid ""
 "Privileges are required to change printer settings. This should only be "
 "needed from the Printers system settings panel."
-msgstr "Yazıcı ayarlarını değiştirebilmek için ayrıcalıklar gereklidir. Bu sadece Yazıcı sistem ayarları panelinden gerekli hale getirilmiş olabilir."
+msgstr "Yazıcı ayarlarını değiştirebilmek için yetki gereklidir. Bu sadece Yazıcı sistem ayarları panelinden gerekli hale getirilmiş olabilir."
 
 #: ../src/org.opensuse.cupspkhelper.mechanism.policy.in.h:14
 msgid "Privileges are required to enable/disable a printer, or a class."
