Update HACKING and README files

--- a/HACKING
+++ b/HACKING
@@ -1,24 +1,23 @@
 Hacking on cups-pk-helper
 =========================
 
- + The development occurs in git:
+ + The development occurs in freedesktop.org's GitLab:
 
-     http://cgit.freedesktop.org/cups-pk-helper/
+     https://gitlab.freedesktop.org/cups-pk-helper/cups-pk-helper/
 
-   For information on how to access freedesktop.org git please read:
+   For information on how to access freedesktop.org's GitLab please read:
 
      http://www.freedesktop.org/wiki/Infrastructure/git
 
- + Please send patches as bug reports in freedesktop.org Bugzilla:
+ + Please report found issues and feature requests in freedesktop.org's GitLab:
 
-     https://bugs.freedesktop.org/ (product cups-pk-helper)
+     https://gitlab.freedesktop.org/cups-pk-helper/cups-pk-helper/-/issues
 
-   Your patch should be in unified diff form (the -u option to GNU
-   diff). See also:
+ + Please send your changes as merge requests in freedesktop.org's GitLab:
 
-     http://live.gnome.org/GnomeLove/SubmittingPatches
+     https://gitlab.freedesktop.org/cups-pk-helper/cups-pk-helper/-/merge_requests
 
- + Please try and send a patch against a recent version of this package.
+ + Please try and send merge requests against a recent version of this package.
    Patches against git master are most preferable.
 
  + Don't commit any but the most trivial patches without approval.
